[tool.poetry]
name = "optrees"
version = "0.1.0"
description = "Algorithms to find optimal trees in graphs."
authors = ["Alejandro Sánchez Yalí <alejandro.sanchezy@udea.edu.co>", "Luis Papiernik <lpapiernik24@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
